Mon Oct 25 21:08:06 CEST 1999 Wichert Akkerman <wakkerma@debian.org>

  * Added Czech translation from Petr Cech <cech@atrey.karlin.mff.cuni.cz>

Mon Oct 25 19:10:50 CEST 1999 Wichert Akkerman <wakkerma@debian.org>

  * Mark more strings for translation in libdpkg and dpkg
  * Don't bother translating debug-statements

Mon Oct 25 11:55:35 EDT 1999 Ben Collins <bcollins.debian.org>

  * scripts/dpkg-shlibdeps: start using objdump as opposed to ldd, this
    works much more cleanly, works with libc5, and allows from better
    error reporting. Also corrected checks on shlibs.local, which wasn't
    really being parsed, it now works as advertised.
  * scripts/{dpkg-gencontrol,dpkg-source,controllib.pl}: fixed references
    to old style build dep fields to match current policy ammendment

Mon Oct 25 17:12:34 CEST 1999 Wichert Akkerman <wakkerma@debian.org>

  * gettextize dselect

Mon Oct 25 08:42:52 EDT 1999 Ben Collins <bcollins.debian.org>

  * debian/rules: fix symlink creaton for /usr/share/doc/dpkg-dev -> dpkg,
    also compress the info and ps files for internals in dpkg-doc

Mon Oct 25 06:50:17 EDT 1999 Ben Collins <bcollins.debian.org>

  * main/processarc.c: fixes calculation of package filename display (the
    ".../foo.deb" one) where it was showing the full path if the basename
    was longer than 30 chars. Now shows just the basename if it can't
    squeez the full path to < 30 chars (even if the basename is > than 30
    chars)

Mon Oct 25 02:27:49 CEST 1999 Wichert Akkerman <wakkerma@debian.org>

  * dselect/main.cc: Fixup error message for invalid parameter to reflect
    we are dselect, not dpkg

Sun Oct 24 20:46:44 EDT 1999 Ben Collins <bcollins.debian.org>

  * scripts/dpkg-source.pl: we want to 'delete' the POSIXLY_CORRECT env
    not 'undef'

Sun Oct 24 20:25:11 EDT 1999 Ben Collins <bcollins.debian.org>

  * debian/dpkg-doc-{postrm,prerm}: Added install-info for internals.info
  * debian/dpkg-internals: fixed misplaced description
