@@ -1,3 +1,7 @@
+Tue Oct 26 19:35:53 CEST 1999 Wichert Akkerman <wakkerma@debian.org>
+
+  * Also translate helpmessages for dselect
+
 Mon Oct 25 21:08:06 CEST 1999 Wichert Akkerman <wakkerma@debian.org>
 
   * Added Czech translation from Petr Cech <cech@atrey.karlin.mff.cuni.cz>
